--- a/src/assets/static/Login.css
+++ b/src/assets/static/Login.css
@@ -1,39 +1,34 @@
-/* Container for the whole login page */
 .login-container {
   display: flex;
-  justify-content: space-between;
+  justify-content: space-around;
   align-items: center;
   height: 100vh;
-  background-color: #e8e8e8;
+  background-color: #f0f4f8;
   padding: 0 100px;
 }
 
-/* Container for the logo */
 .login-logo img {
-  width: 600px; /* Adjust the logo size if necessary */
-  margin-left: 20px; /* Adjust spacing if needed */
+  width: 400px;
+  margin-left: 20px;
 }
 
-/* Styling for the login form card */
 .login-card {
-  background-color: #e9e9e9;
+  background-color: #f1f1f1;
   padding: 40px;
   border-radius: 10px;
-  box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
-  width: 400px;
+  box-shadow: 0 6px 12px rgba(0, 0, 0, 0.3);
+  width: 500px;
 }
 
-/* Center the title text */
 .login-title {
-  font-family: Poppins, sans-serif;
   font-weight: 600;
   text-align: center;
   font-size: 30px;
   margin-bottom: 20px;
 }
 
-/* Styling for input fields */
 .input-group {
+  width: 95%;
   margin-bottom: 20px;
 }
 
@@ -45,23 +40,8 @@
   font-size: 16px;
 }
 
-/* Role selector styles */
-.role-selector {
-  display: flex;
-  justify-content: space-around;
-  margin-bottom: 20px;
-}
-
-/* Remember me checkbox */
-.remember-me {
-  display: flex;
-  align-items: center;
-  margin-bottom: 20px;
-}
-
-/* Sign in button styling */
 .login-button {
-  width: 100%;
+  width: 50%;
   padding: 10px;
   background-color: #007bff;
   color: white;
@@ -69,16 +49,24 @@
   border-radius: 5px;
   font-size: 16px;
   cursor: pointer;
+  margin-top: 20px;
+}
+
+.register-button {
+  background: none;
+  border: none;
+  color: #fff;
+  cursor: pointer;
+  font-size: 14px;
 }
 
 .login-button:hover {
   background-color: #0056b3;
 }
 
-/* Forgot password and register links */
 .forgot-password-link, .register-link {
   text-align: center;
-  margin-top: 10px;
+  margin-top: 20px;
 }
 
 .forgot-password-link a, .register-link a {
@@ -90,6 +78,16 @@
   text-decoration: underline;
 }
 
+.register-button {
+  background: none;
+  color: rgb(0, 128, 255);
+}
+
+.register-button:hover {
+  background: none;
+  color: rgb(0, 128, 255);
+  text-decoration: underline;
+}
 
 @media (max-width: 1024px) {
   .login-container {
@@ -103,7 +101,7 @@
   }
 
   .login-card {
-    width: 90%;
+    width: 80%;
   }
 }
 
@@ -113,7 +111,7 @@
   }
 
   .login-logo img {
-    width: 40vw;
+    width: 30vw;
   }
 
   .login-card {
